--- a/jekyll/app/index.html
+++ b/jekyll/app/index.html
@@ -1,13 +1,17 @@
 ---
-layout: default
-title: Your New Jekyll Site
+layout: homepage
+title: Haskala
 ---
-
-<div id="home">
-  <h1>Blog Posts</h1>
-  <ul class="posts">
-    {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-    {% endfor %}
-  </ul>
-</div>
+  <section>
+    <div class="content">
+      <p> A few words about the site... A few words about the site... A few words about the site... A few words about the site...
+      A few words about the site... A few words about the site... A few words about the site... A few words about the site...
+      A few words about the site... </p>
+    </div>
+  </section>
+  <section class="search-wrapper">
+    <form class="hp_search">
+      <input class="hp-search-text" placeholder="SEARCH">
+      <input type="submit" class="submit hp-search-submit" value="">
+    </form>
+  </section>
