--- a/jekyll/app/index.html
+++ b/jekyll/app/index.html
@@ -15,3 +15,41 @@ title: Haskala
       <input type="submit" class="submit hp-search-submit" value="">
     </form>
   </section>
+  <section class="tags-cloud-wrapper">
+    <h2>TAG CLOUD BY TOPICS</h2>
+    <div class="tags-cloud">
+      <nav class="nav-bar">
+        <ul>
+          <li><a href="tags/ipsum">ipsum</a></li>
+          <li><a href="tags/ipsum">dolor</a></li>
+          <li><a href="tags/ipsum">sic</a></li>
+          <li><a href="tags/ipsum">amet</a></li>
+          <li><a href="tags/ipsum">consectetur</a></li>
+          <li><a href="tags/ipsum">adipiscing</a></li>
+          <li><a href="tags/ipsum">elit</a></li>
+          <li><a href="tags/ipsum">Phsellus</a></li>
+          <li><a href="tags/ipsum">tincidunt</a></li>
+          <li><a href="tags/ipsum">idunt</a></li>
+          <li><a href="tags/ipsum">congue</a></li>
+          <li><a href="tags/ipsum">massa scelerisque utsit</a></li>
+          <li><a href="tags/ipsum">dictum sagittis</a></li>
+          <li><a href="tags/ipsum">sit</a></li>
+          <li><a href="tags/ipsum">dipsic</a></li>
+          <li><a href="tags/ipsum">egestas</a></li>
+          <li><a href="tags/ipsum">elit</a></li>
+          <li><a href="tags/ipsum">suspic a non</a></li>
+          <li><a href="tags/ipsum">dictum</a></li>
+          <li><a href="tags/ipsum">arcu</a></li>
+          <li><a href="tags/ipsum">Nulla ut erat</a></li>
+          <li><a href="tags/ipsum">amet</a></li>
+          <li><a href="tags/ipsum">arcu</a></li>
+          <li><a href="tags/ipsum">dolor</a></li>
+          <li><a href="tags/ipsum">Cras nec dsghfjgnibh</a></li>
+          <li><a href="tags/ipsum">vitae tellus</a></li>
+          <li><a href="tags/ipsum">dictum sagittis</a></li>
+          <li><a href="tags/ipsum">ecteture</a></li>
+          <li><a href="tags/ipsum">dui vitae</a></li>
+        </ul>
+      </nav>
+    </div>
+  </section>
