home page markup 5

--- a/jekyll/app/index.html
+++ b/jekyll/app/index.html
@@ -9,9 +9,9 @@ title: Haskala
     </div>
   </section>
   <section class="search-wrapper">
-    <form class="hp_search">
-      <input class="hp-search-text" placeholder="SEARCH">
-      <input type="submit" class="submit hp-search-submit" value="">
+    <form class="search">
+      <input class="search-text" placeholder="SEARCH">
+      <input type="submit" class="submit search-submit" value="">
     </form>
   </section>
   <section class="tags-cloud-wrapper">
