continue single book
Conflicts:
	jekyll/app/_scss/pages/_homepage.scss

--- a/jekyll/app/books/single-book/index.html
+++ b/jekyll/app/books/single-book/index.html
@@ -26,7 +26,7 @@ title: Haskala
         </div>
         <div class="field">
           <div class="field-label">List of sources Leibniz:</div>
-          <div class="content"></div>
+          <div class="content">Theodicee.</div>
         </div>
         <div class="field">
           <div class="field-label">References:</div>
