--- a/jekyll/app/books.html
+++ b/jekyll/app/books.html
@@ -61,94 +61,100 @@ title: Haskala
   </nav>
 </section>
 <section class="books-list">
-  <div class="letter">A</div>
-  <div class="books-by-letter">
-    <div class="book-title">
-      Abhandlung von der Freiheit des Menschen
-    </div>
-    <div class="book-title">
-      Actenstücke zur Geschichte der Erhebung der Juden zu Bürgern der Republik Batavien
-    </div>
-    <div class="book-title">
-      Akten-Stücke die Reform der Jüdischen Kolonieen in den Preußischen Staaten betreffend
-    </div>
-    <div class="book-title">
-      An das Breslauer Publikum
-    </div>
-    <div class="book-title">
-      An die Herausgeber des hebräischen Sammlers über die frühe Beerdigung der Juden
-    </div>
-    <div class="book-title">
-      Anfangsgründe der Newtonischen Philosophie
-    </div>
-    <div class="book-title">
-      Answer to Mr. Joshua Van Oven’s letters on the present state of the Jewish poor in London
-    </div>
-    <div class="book-title">
-      Apologie der Menschenrechte oder philosophisch kritische Beleuchtung der Schrift
-    </div>
-    <div class="book-title">
-      Apologie des juifs en réponse à la question
-    </div>
-    <div class="book-title">
-      Appel à la justice des nations et des rois
-    </div>
-    <div class="book-title">
-      Aufsätze verschiedenen Inhalts
-    </div>
-  </div>
-  <div class="letter">B</div>
-  <div class="books-by-letter">
-    <div class="book-title">
-      Abhandlung von der Freiheit des Menschen
-    </div>
-    <div class="book-title">
-      Actenstücke zur Geschichte der Erhebung der Juden zu Bürgern der Republik Batavien
-    </div>
-    <div class="book-title">
-      Akten-Stücke die Reform der Jüdischen Kolonieen in den Preußischen Staaten betreffend
-    </div>
-    <div class="book-title">
-      An das Breslauer Publikum
-    </div>
-    <div class="book-title">
-      An die Herausgeber des hebräischen Sammlers über die frühe Beerdigung der Juden
-    </div>
-    <div class="book-title">
-      Anfangsgründe der Newtonischen Philosophie
-    </div>
-    <div class="book-title">
-      Answer to Mr. Joshua Van Oven’s letters on the present state of the Jewish poor in London
-    </div>
-    <div class="book-title">
-      Apologie der Menschenrechte oder philosophisch kritische Beleuchtung der Schrift
-    </div>
-    <div class="book-title">
-      Apologie des juifs en réponse à la question
-    </div>
-    <div class="book-title">
-      Appel à la justice des nations et des rois
-    </div>
-    <div class="book-title">
-      Aufsätze verschiedenen Inhalts
+  <div class="letter-wrapper">
+    <div class="letter"><span>A</span></div>
+    <div class="books-by-letter">
+      <div class="book-title">
+        Abhandlung von der Freiheit des Menschen
+      </div>
+      <div class="book-title">
+        Actenstücke zur Geschichte der Erhebung der Juden zu Bürgern der Republik Batavien
+      </div>
+      <div class="book-title">
+        Akten-Stücke die Reform der Jüdischen Kolonieen in den Preußischen Staaten betreffend
+      </div>
+      <div class="book-title">
+        An das Breslauer Publikum
+      </div>
+      <div class="book-title">
+        An die Herausgeber des hebräischen Sammlers über die frühe Beerdigung der Juden
+      </div>
+      <div class="book-title">
+        Anfangsgründe der Newtonischen Philosophie
+      </div>
+      <div class="book-title">
+        Answer to Mr. Joshua Van Oven’s letters on the present state of the Jewish poor in London
+      </div>
+      <div class="book-title">
+        Apologie der Menschenrechte oder philosophisch kritische Beleuchtung der Schrift
+      </div>
+      <div class="book-title">
+        Apologie des juifs en réponse à la question
+      </div>
+      <div class="book-title">
+        Appel à la justice des nations et des rois
+      </div>
+      <div class="book-title">
+        Aufsätze verschiedenen Inhalts
+      </div>
     </div>
   </div>
-  <div class="letter">C</div>
-  <div class="books-by-letter">
-    <div class="book-title">
-      Abhandlung von der Freiheit des Menschen
+  <div class="letter-wrapper">
+    <div class="letter"><span>B</span></div>
+    <div class="books-by-letter">
+      <div class="book-title">
+        Abhandlung von der Freiheit des Menschen
+      </div>
+      <div class="book-title">
+        Actenstücke zur Geschichte der Erhebung der Juden zu Bürgern der Republik Batavien
+      </div>
+      <div class="book-title">
+        Akten-Stücke die Reform der Jüdischen Kolonieen in den Preußischen Staaten betreffend
+      </div>
+      <div class="book-title">
+        An das Breslauer Publikum
+      </div>
+      <div class="book-title">
+        An die Herausgeber des hebräischen Sammlers über die frühe Beerdigung der Juden
+      </div>
+      <div class="book-title">
+        Anfangsgründe der Newtonischen Philosophie
+      </div>
+      <div class="book-title">
+        Answer to Mr. Joshua Van Oven’s letters on the present state of the Jewish poor in London
+      </div>
+      <div class="book-title">
+        Apologie der Menschenrechte oder philosophisch kritische Beleuchtung der Schrift
+      </div>
+      <div class="book-title">
+        Apologie des juifs en réponse à la question
+      </div>
+      <div class="book-title">
+        Appel à la justice des nations et des rois
+      </div>
+      <div class="book-title">
+        Aufsätze verschiedenen Inhalts
+      </div>
     </div>
-    <div class="book-title">
-      Actenstücke zur Geschichte der Erhebung der Juden zu Bürgern der Republik Batavien
-    </div>
-    <div class="book-title">
-      Akten-Stücke die Reform der Jüdischen Kolonieen in den Preußischen Staaten betreffend
-    </div>
-    <div class="book-title">
-      An das Breslauer Publikum
-    </div>
-    <div class="book-title">
-      An die Herausgeber des hebräischen Sammlers über die frühe Beerdigung der Juden
+  </div>
+  <div class="letter-wrapper">
+    <div class="letter"><span>C</span></div>
+    <div class="books-by-letter">
+      <div class="book-title">
+        Abhandlung von der Freiheit des Menschen
+      </div>
+      <div class="book-title">
+        Actenstücke zur Geschichte der Erhebung der Juden zu Bürgern der Republik Batavien
+      </div>
+      <div class="book-title">
+        Akten-Stücke die Reform der Jüdischen Kolonieen in den Preußischen Staaten betreffend
+      </div>
+      <div class="book-title">
+        An das Breslauer Publikum
+      </div>
+      <div class="book-title">
+        An die Herausgeber des hebräischen Sammlers über die frühe Beerdigung der Juden
+      </div>
     </div>
   </div>
 </section>
