--- a/jekyll/app/index.html
+++ b/jekyll/app/index.html
@@ -10,7 +10,7 @@ title: Library of the Haskala
   <section class="search">
     <form>
       <input class="search-text" placeholder="SEARCH">
-      <input type="submit" class="submit submit" value="">
+      <input type="submit" class="submit" value="">
     </form>
   </section>
 
