--- a/jekyll/app/index.html
+++ b/jekyll/app/index.html
@@ -1,13 +1,54 @@
 ---
-layout: default
-title: Your New Jekyll Site
+layout: homepage
+title: Library of the Haskala
 ---
+  <section class="main-content">
+    <p> A few words about this site, who are we and what can be found here,</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus tincidunt vehicula arcu, congue volutpat massa scelerisque ut. Nunc luctus nec libero ut luctus. Nunc dictum sagittis dui vitae blandit. Nulla ut erat vitae arcu faucibus egestas feugiat a eros. Cras nec nibh vitae tellus dictum suscipit a non dui. Phasellus at mattis urna. Integer odio arcu, commodo et condimentum vitae, volutpat ut mi.  </p>
+  </section>
 
-<div id="home">
-  <h1>Blog Posts</h1>
-  <ul class="posts">
-    {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-    {% endfor %}
-  </ul>
-</div>
+  <section class="search">
+    <form>
+      <input class="search-text" placeholder="SEARCH">
+      <input type="submit" class="submit" value="">
+    </form>
+  </section>
+
+  <section class="tags-cloud-wrapper">
+    <h3>TAG CLOUD BY TOPICS</h3>
+    <div class="tags-cloud">
+      <nav class="nav-bar">
+        <ul>
+          <li><a href="tags/ipsum">ipsum</a></li>
+          <li><a href="tags/ipsum">dolor</a></li>
+          <li><a href="tags/ipsum">sic</a></li>
+          <li><a href="tags/ipsum">amet</a></li>
+          <li><a href="tags/ipsum">consectetur</a></li>
+          <li><a href="tags/ipsum">adipiscing</a></li>
+          <li><a href="tags/ipsum">elit</a></li>
+          <li><a href="tags/ipsum">Phsellus</a></li>
+          <li><a href="tags/ipsum">tincidunt</a></li>
+          <li><a href="tags/ipsum">idunt</a></li>
+          <li><a href="tags/ipsum">congue</a></li>
+          <li><a href="tags/ipsum">massa scelerisque utsit</a></li>
+          <li><a href="tags/ipsum">dictum sagittis</a></li>
+          <li><a href="tags/ipsum">sit</a></li>
+          <li><a href="tags/ipsum">dipsic</a></li>
+          <li><a href="tags/ipsum">egestas</a></li>
+          <li><a href="tags/ipsum">elit</a></li>
+          <li><a href="tags/ipsum">suspic a non</a></li>
+          <li><a href="tags/ipsum">dictum</a></li>
+          <li><a href="tags/ipsum">arcu</a></li>
+          <li><a href="tags/ipsum">Nulla ut erat</a></li>
+          <li><a href="tags/ipsum">amet</a></li>
+          <li><a href="tags/ipsum">arcu</a></li>
+          <li><a href="tags/ipsum">dolor</a></li>
+          <li><a href="tags/ipsum">Cras nec dsghfjgnibh</a></li>
+          <li><a href="tags/ipsum">vitae tellus</a></li>
+          <li><a href="tags/ipsum">dictum sagittis</a></li>
+          <li><a href="tags/ipsum">ecteture</a></li>
+          <li><a href="tags/ipsum">dui vitae</a></li>
+        </ul>
+      </nav>
+    </div>
+  </section>
