#15: Single book markup

--- a/jekyll/app/index.html
+++ b/jekyll/app/index.html
@@ -1,6 +1,7 @@
 ---
-layout: homepage
+layout: default
 title: Library of the Haskala
+body_class: front
 ---
   <section class="main-content">
     <p> A few words about this site, who are we and what can be found here,</p>
