Fix the style in the book page.

--- a/jekyll/app/book.html
+++ b/jekyll/app/book.html
@@ -87,7 +87,7 @@ body_class: page-single-book
           </div>
         </div>
         <div class="fields-group">
-          <div class="fields-group-name">Publisher/
+          <div class="fields-group-name fields-group-name-last">Publisher/
             printing press
           </div>
           <div class="fields">
