Fix the style in the book page, with tests

--- a/jekyll/app/book.html
+++ b/jekyll/app/book.html
@@ -4,7 +4,7 @@ title: Haskala
 body_class: page-single-book
 ---
 <section>
-  <h3 class="hr-title">BOOKS</h3>
+  <h3 class="hr-title">BOOK</h3>
   <div class="main-content">
     <section class="top-details">
       <h2 class="title">Discours prononcé par M.r Israel Jacobson ... lors de la dédicace du Temple de Jacob à Seesen: Traduit de l'allemand par C. D.</h2>
@@ -38,13 +38,12 @@ body_class: page-single-book
     <section class="bottom-details">
       <nav class="details-navigation">
         <ul>
-          <li class="first active"><a href="#">Translation</a></li>
+          <li class="first"><a href="#">Translation</a></li>
           <li><a href="#">New edition</a></li>
           <li><a href="#">Volumes</a></li>
           <li><a href="#">Publisher/Printing press</a></li>
           <li><a href="#">Editions</a></li>
-          <li><a href="#">Book Structure</a></li>
-          <li class="last"><a href="#">Ppppppp</a></li>
+          <li class="last"><a href="#">Book Structure</a></li>
         </ul>
       </nav>
       <div>
@@ -87,7 +86,7 @@ body_class: page-single-book
           </div>
         </div>
         <div class="fields-group">
-          <div class="fields-group-name">Publisher/
+          <div class="fields-group-name fields-group-name-last">Publisher/
             printing press
           </div>
           <div class="fields">
