Starting implement book page

--- a/jekyll/app/book.html
+++ b/jekyll/app/book.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Haskala
-body_class: page-single-book
+body_class: node-type-book
 ---
 <section>
   <h3 class="hr-title">BOOK</h3>
