--- a/jekyll/app/book.html
+++ b/jekyll/app/book.html
@@ -13,7 +13,6 @@ body_class: node-type-book
           <div class="field-label type-label">Type of book:</div>
           <div class="field-items"></div>
         </div>
-        
         <div class="field">
           <div class="field-label">Full title of book:</div>
           <div class="field-items">Abhandlung von der Freiheit des Menschen</div>
@@ -37,93 +36,94 @@ body_class: node-type-book
       </div>
     </section>
     <section class="bottom-details">
-      <nav class="details-navigation">
-        <ul>
-          <li class="first"><a href="#">Translation</a></li>
-          <li><a href="#">New edition</a></li>
-          <li><a href="#">Volumes</a></li>
-          <li><a href="#">Publisher/Printing press</a></li>
-          <li><a href="#">Editions</a></li>
-          <li class="last"><a href="#">Book Structure</a></li>
-        </ul>
-      </nav>
-      <div>
-        <div class="fields-group">
-          <div class="fields-group-name">Translation</div>
-          <div class="fields">
-            <div class="field">
-              <div class="field-label">Name of the publisher -</div>
-              <div class="field-items">Michaelis</div>
+      <div class="horizontal-tabs">
+        <nav class="details-navigation">
+          <ul class="horizontal-tabs-list">
+            <li class="first selected"><a href="#"><strong>Translation</strong></a></li>
+            <li><a href="#">New edition</a></li>
+            <li><a href="#">Volumes</a></li>
+            <li><a href="#">Publisher/Printing press</a></li>
+            <li><a href="#">Editions</a></li>
+            <li class="last"><a href="#">Book Structure</a></li>
+          </ul>
+        </nav>
+        <div>
+          <fieldset class="field-group-htab">
+            <legend class="panel-heading">Translation</legend>
+            <div class="fields">
+              <div class="field">
+                <div class="field-label">Name of the publisher -</div>
+                <div class="field-items">Michaelis</div>
+              </div>
+              <div class="field">
+                <div class="field-label">Year of publication as it appears in the book -</div>
+                <div class="field-items">1797</div>
+              </div>
+              <div class="field">
+                <div class="field-label">Place of publication as it appears in the book -</div>
+                <div class="field-items">Neustrelitz</div>
+              </div>
+              <div class="field">
+                <div class="field-label">Format of date -</div>
+                <div class="field-items">modern</div>
+              </div>
             </div>
-            <div class="field">
-              <div class="field-label">Year of publication as it appears in the book -</div>
-              <div class="field-items">1797</div>
+          </fieldset>
+          <fieldset class="field-group-htab">
+            <legend class="panel-heading">New edition</legend>
+            <div class="fields">
+              <div class="field">
+                <div class="field-label">Name of the publisher -</div>
+                <div class="field-items">Michaelis</div>
+              </div>
+              <div class="field">
+                <div class="field-label">Year of publication as it appears in the book -</div>
+                <div class="field-items">1797</div>
+              </div>
+              <div class="field">
+                <div class="field-label">Place of publication as it appears in the book -</div>
+                <div class="field-items">Neustrelitz</div>
+              </div>
             </div>
-            <div class="field">
-              <div class="field-label">Place of publication as it appears in the book -</div>
-              <div class="field-items">Neustrelitz</div>
+          </fieldset>
+          <fieldset class="field-group-htab">
+            <div class="panel-heading field-group-htab-name-last">Publisher/
+              printing press
             </div>
-            <div class="field">
-              <div class="field-label">Format of date -</div>
-              <div class="field-items">modern</div>
+            <div class="fields">
+              <div class="field">
+                <div class="field-label">Are there personal addresses?</div>
+                <div class="field-items">No</div>
+              </div>
+              <div class="field">
+                <div class="field-label">Are there rabbinical approbations?</div>
+                <div class="field-items">No</div>
+              </div>
+              <div class="field">
+                <div class="field-label">Are there recommendations?</div>
+                <div class="field-items">No</div>
+              </div>
+              <div class="field">
+                <div class="field-label">Are there dedications?</div>
+                <div class="field-items">No</div>
+              </div>
+              <div class="field">
+                <div class="field-label">Are there thanks?</div>
+                <div class="field-items">No</div>
+              </div>
+              <div class="field">
+                <div class="field-label">Is there an appeal to sell subscriptions?</div>
+                <div class="field-items">No</div>
+              </div>
+              <div class="field">
+                <div class="field-label">Is there a list of subscribers?</div>
+                <div class="field-items">No</div>
+              </div>
             </div>
-          </div>
-        </div>
-        <div class="fields-group">
-          <div class="fields-group-name">New edition</div>
-          <div class="fields">
-            <div class="field">
-              <div class="field-label">Name of the publisher -</div>
-              <div class="field-items">Michaelis</div>
-            </div>
-            <div class="field">
-              <div class="field-label">Year of publication as it appears in the book -</div>
-              <div class="field-items">1797</div>
-            </div>
-            <div class="field">
-              <div class="field-label">Place of publication as it appears in the book -</div>
-              <div class="field-items">Neustrelitz</div>
-            </div>
-          </div>
-        </div>
-        <div class="fields-group">
-          <div class="fields-group-name fields-group-name-last">Publisher/
-            printing press
-          </div>
-          <div class="fields">
-            <div class="field">
-              <div class="field-label">Are there personal addresses?</div>
-              <div class="field-items">No</div>
-            </div>
-            <div class="field">
-              <div class="field-label">Are there rabbinical approbations?</div>
-              <div class="field-items">No</div>
-            </div>
-            <div class="field">
-              <div class="field-label">Are there recommendations?</div>
-              <div class="field-items">No</div>
-            </div>
-            <div class="field">
-              <div class="field-label">Are there dedications?</div>
-              <div class="field-items">No</div>
-            </div>
-            <div class="field">
-              <div class="field-label">Are there thanks?</div>
-              <div class="field-items">No</div>
-            </div>
-            <div class="field">
-              <div class="field-label">Is there an appeal to sell subscriptions?</div>
-              <div class="field-items">No</div>
-            </div>
-            <div class="field">
-              <div class="field-label">Is there a list of subscribers?</div>
-              <div class="field-items">No</div>
-            </div>
-          </div>
+          </fieldset>
         </div>
       </div>
     </section>
-
   </div>
 </section>
 
