--- a/jekyll/app/book.html
+++ b/jekyll/app/book.html
@@ -44,13 +44,14 @@ body_class: node-type-book
             <li><a href="#">Volumes</a></li>
             <li><a href="#">Publisher/Printing press</a></li>
             <li><a href="#">Editions</a></li>
+            <li><a href="#">Editions</a></li>
             <li class="last"><a href="#">Book Structure</a></li>
           </ul>
         </nav>
         <div>
           <fieldset class="field-group-htab">
             <legend class="panel-heading">Translation</legend>
-            <div class="fields">
+            <div class="panel-body">
               <div class="field">
                 <div class="field-label">Name of the publisher -</div>
                 <div class="field-items">Michaelis</div>
@@ -71,7 +72,7 @@ body_class: node-type-book
           </fieldset>
           <fieldset class="field-group-htab">
             <legend class="panel-heading">New edition</legend>
-            <div class="fields">
+            <div class="panel-body">
               <div class="field">
                 <div class="field-label">Name of the publisher -</div>
                 <div class="field-items">Michaelis</div>
@@ -90,7 +91,7 @@ body_class: node-type-book
             <div class="panel-heading field-group-htab-name-last">Publisher/
               printing press
             </div>
-            <div class="fields">
+            <div class="panel-body">
               <div class="field">
                 <div class="field-label">Are there personal addresses?</div>
                 <div class="field-items">No</div>
