Squashed commit of 45

--- a/jekyll/app/book.html
+++ b/jekyll/app/book.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Haskala
-body_class: page-single-book
+body_class: node-type-book
 ---
 <section>
   <h3 class="hr-title">BOOK</h3>
@@ -38,7 +38,7 @@ body_class: page-single-book
     <section class="bottom-details">
       <nav class="details-navigation">
         <ul>
-          <li class="first"><a href="#">Translation</a></li>
+          <li class="first active"><a href="#">Translation</a></li>
           <li><a href="#">New edition</a></li>
           <li><a href="#">Volumes</a></li>
           <li><a href="#">Publisher/Printing press</a></li>
@@ -46,7 +46,7 @@ body_class: page-single-book
           <li class="last"><a href="#">Book Structure</a></li>
         </ul>
       </nav>
-      <div>
+      <div class="groups">
         <div class="fields-group">
           <div class="fields-group-name">Translation</div>
           <div class="fields">
