Continue ctools plugin
commit aaf938a5ebcecf6c59a304883f552b1c0a5e9c3d
Merge: f295a98 f64d93b
Author: Miri Meltzer <miri@gizra.com>
Date:   Tue Jan 13 09:31:50 2015 +0200

    Merge branch '45' of github.com:Gizra/haskala into 45

commit f295a98ae0e6e55f9f57f9466cec42b071a82dd7
Author: Miri Meltzer <miri@gizra.com>
Date:   Tue Jan 13 09:30:54 2015 +0200

    Ctools plugin

commit f64d93bc600ff882154dd0953118ec8b87061202
Merge: 4f8a7fd c8a948c
Author: Itamar Shapira Bar-Lev <bitamar@gmail.com>
Date:   Mon Jan 12 23:33:19 2015 +0200

    Merge branch 'master' into 45

commit 4f8a7fd364a026e75fd676dcfc5515428c945737
Author: Miri Meltzer <miri@gizra.com>
Date:   Mon Jan 12 16:03:31 2015 +0200

    node_view:Book page

commit 5547026d8f6ff07dcc4402886d635387ead50f06
Author: Miri Meltzer <miri@gizra.com>
Date:   Mon Jan 12 15:26:27 2015 +0200

    Plugin fix

commit f1ca9883f0b4aadd3644975b727aaa82133e52aa
Author: Miri Meltzer <miri@gizra.com>
Date:   Mon Jan 12 14:43:13 2015 +0200

    Ctools plugin

commit 69732def4f35e0fd599a620e7dba8b6157654b21
Author: Miri Meltzer <miri@gizra.com>
Date:   Mon Jan 12 11:44:07 2015 +0200

    Starting views

commit 9c47eadbdf916e07dee751bb6c738b4707ff2a2b
Author: Miri Meltzer <miri@gizra.com>
Date:   Mon Jan 12 09:47:08 2015 +0200

    ADD panels node view variable

commit 4759cac8d1d0ad74efb48281fea8715e75c90aaa
Author: Miri Meltzer <miri@gizra.com>
Date:   Mon Jan 12 09:33:02 2015 +0200

    css fix

commit a915bb012291fd912a942a5aa943fa41ecdff6c8
Author: Miri Meltzer <miri@gizra.com>
Date:   Mon Jan 12 08:57:02 2015 +0200

    Footer nav

commit 4390afe1a2e05908436be794cab9a1923ba254f5
Merge: 28ee12f a6df3c1
Author: Miri Meltzer <miri@gizra.com>
Date:   Mon Jan 12 07:58:28 2015 +0200

    Merge branch 'master' into 45

commit 28ee12f4698750dea89ce9b73558513765a5cf09
Author: Miri Meltzer <miri@gizra.com>
Date:   Mon Jan 12 07:55:00 2015 +0200

    CSS

commit 5b6a3febd0d1a58f932f2e237c6405e138655bec
Author: Miri Meltzer <miri@gizra.c

--- a/jekyll/app/book.html
+++ b/jekyll/app/book.html
@@ -11,27 +11,27 @@ body_class: node-type-book
       <div class="top-fields">
         <div class="field">
           <div class="field-label type-label">Type of book:</div>
-          <div class="content"></div>
+          <div class="field-items"></div>
         </div>
         <div class="field">
           <div class="field-label">Full title of book:</div>
-          <div class="content">Abhandlung von der Freiheit des Menschen</div>
+          <div class="field-items">Abhandlung von der Freiheit des Menschen</div>
         </div>
         <div class="field">
           <div class="field-label">Text is presented as original?</div>
-          <div class="content">Yes</div>
+          <div class="field-items">Yes</div>
         </div>
         <div class="field">
           <div class="field-label">Are there sources mentioned in the book itself?</div>
-          <div class="content">Yes</div>
+          <div class="field-items">Yes</div>
         </div>
         <div class="field">
           <div class="field-label">List of sources Leibniz:</div>
-          <div class="content">Theodicee.</div>
+          <div class="field-items">Theodicee.</div>
         </div>
         <div class="field">
           <div class="field-label">References:</div>
-          <div class="content">11</div>
+          <div class="field-items">11</div>
         </div>
       </div>
     </section>
@@ -46,25 +46,25 @@ body_class: node-type-book
           <li class="last"><a href="#">Book Structure</a></li>
         </ul>
       </nav>
-      <div class="groups">
+      <section class="groups">
         <div class="fields-group">
           <div class="fields-group-name">Translation</div>
           <div class="fields">
             <div class="field">
               <div class="field-label">Name of the publisher -</div>
-              <div class="content">Michaelis</div>
+              <div class="field-items">Michaelis</div>
             </div>
             <div class="field">
               <div class="field-label">Year of publication as it appears in the book -</div>
-              <div class="content">1797</div>
+              <div class="field-items">1797</div>
             </div>
             <div class="field">
               <div class="field-label">Place of publication as it appears in the book -</div>
-              <div class="content">Neustrelitz</div>
+              <div class="field-items">Neustrelitz</div>
             </div>
             <div class="field">
               <div class="field-label">Format of date -</div>
-              <div class="content">modern</div>
+              <div class="field-items">modern</div>
             </div>
           </div>
         </div>
@@ -73,15 +73,15 @@ body_class: node-type-book
           <div class="fields">
             <div class="field">
               <div class="field-label">Name of the publisher -</div>
-              <div class="content">Michaelis</div>
+              <div class="field-items">Michaelis</div>
             </div>
             <div class="field">
               <div class="field-label">Year of publication as it appears in the book -</div>
-              <div class="content">1797</div>
+              <div class="field-items">1797</div>
             </div>
             <div class="field">
               <div class="field-label">Place of publication as it appears in the book -</div>
-              <div class="content">Neustrelitz</div>
+              <div class="field-items">Neustrelitz</div>
             </div>
           </div>
         </div>
@@ -92,35 +92,35 @@ body_class: node-type-book
           <div class="fields">
             <div class="field">
               <div class="field-label">Are there personal addresses?</div>
-              <div class="content">No</div>
+              <div class="field-items">No</div>
             </div>
             <div class="field">
               <div class="field-label">Are there rabbinical approbations?</div>
-              <div class="content">No</div>
+              <div class="field-items">No</div>
             </div>
             <div class="field">
               <div class="field-label">Are there recommendations?</div>
-              <div class="content">No</div>
+              <div class="field-items">No</div>
             </div>
             <div class="field">
               <div class="field-label">Are there dedications?</div>
-              <div class="content">No</div>
+              <div class="field-items">No</div>
             </div>
             <div class="field">
               <div class="field-label">Are there thanks?</div>
-              <div class="content">No</div>
+              <div class="field-items">No</div>
             </div>
             <div class="field">
               <div class="field-label">Is there an appeal to sell subscriptions?</div>
-              <div class="content">No</div>
+              <div class="field-items">No</div>
             </div>
             <div class="field">
               <div class="field-label">Is there a list of subscribers?</div>
-              <div class="content">No</div>
+              <div class="field-items">No</div>
             </div>
           </div>
         </div>
-      </div>
+      </section>
     </section>
 
   </div>
