Book groups plugin

--- a/jekyll/app/book.html
+++ b/jekyll/app/book.html
@@ -38,7 +38,7 @@ body_class: node-type-book
     <section class="bottom-details">
       <nav class="details-navigation">
         <ul>
-          <li class="first active"><a href="#">Translation</a></li>
+          <li class="active"><a href="#">Translation</a></li>
           <li><a href="#">New edition</a></li>
           <li><a href="#">Volumes</a></li>
           <li><a href="#">Publisher/Printing press</a></li>
