--- a/jekyll/app/book.html
+++ b/jekyll/app/book.html
@@ -6,9 +6,9 @@ body_class: node-type-book
 <section>
   <h3 class="hr-title">BOOK</h3>
   <div class="main-content">
-    <section class="top-details">
+    <section id="top-details">
       <h2 class="title">Discours prononcé par M.r Israel Jacobson ... lors de la dédicace du Temple de Jacob à Seesen: Traduit de l'allemand par C. D.</h2>
-      <div class="top-fields">
+      <div id="top-fields">
         <div class="field">
           <div class="field-label type-label">Type of book:</div>
           <div class="field-items"></div>
@@ -35,8 +35,8 @@ body_class: node-type-book
         </div>
       </div>
     </section>
-    <section class="bottom-details">
-      <nav class="details-navigation">
+    <section id="bottom-details">
+      <nav id="details-navigation">
         <ul>
           <li class="active"><a href="#">Translation</a></li>
           <li><a href="#">New edition</a></li>
@@ -46,7 +46,7 @@ body_class: node-type-book
           <li class="last"><a href="#">Book Structure</a></li>
         </ul>
       </nav>
-      <section class="groups">
+      <section id="groups">
         <div class="fields-group">
           <div class="fields-group-name">Translation</div>
           <div class="fields">
