--- a/jekyll/app/book.html
+++ b/jekyll/app/book.html
@@ -4,7 +4,7 @@ title: Haskala
 body_class: node-type-book
 ---
 <section>
-  <h3 class="hr-title">BOOK</h3>
+  <h3 class="hr-title">book</h3>
   <div class="main-content">
     <section id="top-details">
       <h2 class="title">Discours prononcé par M.r Israel Jacobson ... lors de la dédicace du Temple de Jacob à Seesen: Traduit de l'allemand par C. D.</h2>
