--- a/jekyll/app/book.html
+++ b/jekyll/app/book.html
@@ -1,44 +1,44 @@
 ---
 layout: default
 title: Haskala
-body_class: page-single-book
+body_class: node-type-book
 ---
 <section>
-  <h3 class="hr-title">BOOK</h3>
+  <h3 class="hr-title">Book</h3>
   <div class="main-content">
-    <section class="top-details">
+    <section id="top-details">
       <h2 class="title">Discours prononcé par M.r Israel Jacobson ... lors de la dédicace du Temple de Jacob à Seesen: Traduit de l'allemand par C. D.</h2>
-      <div class="top-fields">
+      <div id="top-fields">
         <div class="field">
           <div class="field-label type-label">Type of book:</div>
-          <div class="content"></div>
+          <div class="field-items"></div>
         </div>
         <div class="field">
           <div class="field-label">Full title of book:</div>
-          <div class="content">Abhandlung von der Freiheit des Menschen</div>
+          <div class="field-items">Abhandlung von der Freiheit des Menschen</div>
         </div>
         <div class="field">
           <div class="field-label">Text is presented as original?</div>
-          <div class="content">Yes</div>
+          <div class="field-items">Yes</div>
         </div>
         <div class="field">
           <div class="field-label">Are there sources mentioned in the book itself?</div>
-          <div class="content">Yes</div>
+          <div class="field-items">Yes</div>
         </div>
         <div class="field">
           <div class="field-label">List of sources Leibniz:</div>
-          <div class="content">Theodicee.</div>
+          <div class="field-items">Theodicee.</div>
         </div>
         <div class="field">
           <div class="field-label">References:</div>
-          <div class="content">11</div>
+          <div class="field-items">11</div>
         </div>
       </div>
     </section>
-    <section class="bottom-details">
-      <nav class="details-navigation">
+    <section id="bottom-details">
+      <nav id="details-navigation">
         <ul>
-          <li class="first"><a href="#">Translation</a></li>
+          <li class="active"><a href="#">Translation</a></li>
           <li><a href="#">New edition</a></li>
           <li><a href="#">Volumes</a></li>
           <li><a href="#">Publisher/Printing press</a></li>
@@ -46,25 +46,25 @@ body_class: page-single-book
           <li class="last"><a href="#">Book Structure</a></li>
         </ul>
       </nav>
-      <div>
+      <section id="groups">
         <div class="fields-group">
           <div class="fields-group-name">Translation</div>
           <div class="fields">
             <div class="field">
               <div class="field-label">Name of the publisher -</div>
-              <div class="content">Michaelis</div>
+              <div class="field-items">Michaelis</div>
             </div>
             <div class="field">
               <div class="field-label">Year of publication as it appears in the book -</div>
-              <div class="content">1797</div>
+              <div class="field-items">1797</div>
             </div>
             <div class="field">
               <div class="field-label">Place of publication as it appears in the book -</div>
-              <div class="content">Neustrelitz</div>
+              <div class="field-items">Neustrelitz</div>
             </div>
             <div class="field">
               <div class="field-label">Format of date -</div>
-              <div class="content">modern</div>
+              <div class="field-items">modern</div>
             </div>
           </div>
         </div>
@@ -73,15 +73,15 @@ body_class: page-single-book
           <div class="fields">
             <div class="field">
               <div class="field-label">Name of the publisher -</div>
-              <div class="content">Michaelis</div>
+              <div class="field-items">Michaelis</div>
             </div>
             <div class="field">
               <div class="field-label">Year of publication as it appears in the book -</div>
-              <div class="content">1797</div>
+              <div class="field-items">1797</div>
             </div>
             <div class="field">
               <div class="field-label">Place of publication as it appears in the book -</div>
-              <div class="content">Neustrelitz</div>
+              <div class="field-items">Neustrelitz</div>
             </div>
           </div>
         </div>
@@ -92,35 +92,35 @@ body_class: page-single-book
           <div class="fields">
             <div class="field">
               <div class="field-label">Are there personal addresses?</div>
-              <div class="content">No</div>
+              <div class="field-items">No</div>
             </div>
             <div class="field">
               <div class="field-label">Are there rabbinical approbations?</div>
-              <div class="content">No</div>
+              <div class="field-items">No</div>
             </div>
             <div class="field">
               <div class="field-label">Are there recommendations?</div>
-              <div class="content">No</div>
+              <div class="field-items">No</div>
             </div>
             <div class="field">
               <div class="field-label">Are there dedications?</div>
-              <div class="content">No</div>
+              <div class="field-items">No</div>
             </div>
             <div class="field">
               <div class="field-label">Are there thanks?</div>
-              <div class="content">No</div>
+              <div class="field-items">No</div>
             </div>
             <div class="field">
               <div class="field-label">Is there an appeal to sell subscriptions?</div>
-              <div class="content">No</div>
+              <div class="field-items">No</div>
             </div>
             <div class="field">
               <div class="field-label">Is there a list of subscribers?</div>
-              <div class="content">No</div>
+              <div class="field-items">No</div>
             </div>
           </div>
         </div>
-      </div>
+      </section>
     </section>
 
   </div>
