Implementing search form

--- a/jekyll/app/index.html
+++ b/jekyll/app/index.html
@@ -9,9 +9,9 @@ body_class: front
   </section>
 
   <section class="search">
-    <form>
-      <input class="search-text" placeholder="SEARCH">
-      <input type="submit" class="submit" value="">
+    <form id="search-api-page-search-form-haskala">
+      <input class="form-text" placeholder="SEARCH">
+      <input type="submit" class="form-submit" value="">
     </form>
   </section>
 
