--- a/jekyll/app/books.html
+++ b/jekyll/app/books.html
@@ -25,11 +25,14 @@ body_class: page-books
       <li><a href="#">N</a></li>
       <li><a href="#">O</a></li>
       <li><a href="#">P</a></li>
+      <li><a href="#">Q</a></li>
       <li><a href="#">R</a></li>
       <li><a href="#">S</a></li>
       <li><a href="#">T</a></li>
       <li><a href="#">U</a></li>
       <li><a href="#">V</a></li>
+      <li><a href="#">X</a></li>
+      <li><a href="#">Y</a></li>
       <li><a href="#">W</a></li>
       <li class="last"><a href="#">Z</a></li>
     </ul>
