--- a/jekyll/app/books.html
+++ b/jekyll/app/books.html
@@ -4,9 +4,9 @@ title: Haskala
 body_class: page-books
 ---
 <section class="books-filter">
-  <div class="results-message">
+  <!--<div class="results-message">
     The following 200 pages are in this category, out of 525 total.
-  </div>
+  </div>-->
   <nav class="eng">
     <ul>
       <li class="first"><a href="#">A</a></li>
