WIP: Implementing tabs navigation

--- a/jekyll/app/book.html
+++ b/jekyll/app/book.html
@@ -37,14 +37,21 @@ body_class: node-type-book
     </section>
     <section id="bottom-details">
       <nav id="details-navigation">
-        <ul>
-          <li class="active"><a href="#">Translation</a></li>
-          <li><a href="#">New edition</a></li>
-          <li><a href="#">Volumes</a></li>
-          <li><a href="#">Publisher/Printing press</a></li>
-          <li><a href="#">Editions</a></li>
-          <li class="last"><a href="#">Book Structure</a></li>
-        </ul>
+        <a class="previous" href="#"></a>
+        <div class="tabs-frame">
+          <ul>
+            <li><a href="#Type of book">Type of book</a></li>
+            <li><a href="#Publisher/ Printing press">Publisher/ Printing press</a></li>
+            <li><a href="#Editions">Editions</a></li>
+            <li><a href="#Book structure">Book structure</a></li>
+            <li><a href="#Prefaces">Prefaces</a></li>
+            <li><a href="#Persons mentioned in book">Persons mentioned in book</a></li>
+            <li><a href="#Catalog numbers">Catalog numbers</a></li>
+            <li><a href="#References and bibliography">References and bibliography</a></li>
+            <li><a href="#Book producers">Book producers</a></li>
+          </ul>
+        </div>
+        <a class="next" href="#"></a>
       </nav>
       <section id="groups">
         <div class="fields-group">
