--- a/jekyll/app/book.html
+++ b/jekyll/app/book.html
@@ -37,7 +37,7 @@ body_class: node-type-book
     </section>
     <section id="bottom-details">
       <nav id="details-navigation">
-        <a class="previous" href="#"></a>
+        <a class="previous" data-direction="previous" href="#"></a>
         <div class="tabs-frame">
           <ul>
             <li><a href="#Type of book">Type of book</a></li>
@@ -51,7 +51,7 @@ body_class: node-type-book
             <li><a href="#Book producers">Book producers</a></li>
           </ul>
         </div>
-        <a class="next" href="#"></a>
+        <a class="next" data-direction="next" href="#"></a>
       </nav>
       <section id="groups">
         <div class="fields-group">
