--- a/jekyll/app/book.html
+++ b/jekyll/app/book.html
@@ -40,15 +40,12 @@ body_class: node-type-book
         <a class="previous disabled" data-direction="previous"></a>
         <div class="tabs-frame">
           <ul>
-            <li><a href="#Type of book">Type of book</a></li>
-            <li><a href="#Publisher/ Printing press">Publisher/ Printing press</a></li>
-            <li><a href="#Editions">Editions</a></li>
-            <li><a href="#Book structure">Book structure</a></li>
-            <li><a href="#Prefaces">Prefaces</a></li>
-            <li><a href="#Persons mentioned in book">Persons mentioned in book</a></li>
-            <li><a href="#Catalog numbers">Catalog numbers</a></li>
-            <li><a href="#References and bibliography">References and bibliography</a></li>
-            <li><a href="#Book producers">Book producers</a></li>
+            <li class="active"><a href="#">Translation</a></li>
+            <li><a href="#">New edition</a></li>
+            <li><a href="#">Volumes</a></li>
+            <li><a href="#">Publisher/Printing press</a></li>
+            <li><a href="#">Editions</a></li>
+            <li class="last"><a href="#">Book Structure</a></li>
           </ul>
         </div>
         <a class="next" data-direction="next"></a>
