--- a/jekyll/app/book.html
+++ b/jekyll/app/book.html
@@ -45,6 +45,8 @@ body_class: node-type-book
             <li><a href="#">Volumes</a></li>
             <li><a href="#">Publisher/Printing press</a></li>
             <li><a href="#">Editions</a></li>
+            <li><a href="#">Editions</a></li>
+            <li><a href="#">Editions</a></li>
             <li class="last"><a href="#">Book Structure</a></li>
           </ul>
         </div>
